@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.495 2007/03/14 11:22:23 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.496 2007/03/14 12:15:56 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -174,6 +174,13 @@ PH/39 In a list of hosts for manualroute, if one item (either because of multi-
       all the secondary addresses of the first item were incorrectly removed
       from the list, along with the local host and any following hosts (which
       is what is supposed to happen).
+
+PH/40 When Exim receives a message, it writes the login name, uid, and gid of
+      whoever called Exim into the -H file. In the case of the daemon it was
+      behaving confusingly. When first started, it used values for whoever
+      started the daemon, but after a SIGHUP it used the Exim user (because it
+      calls itself on a restart). I have changed the code so that it now always
+      uses the Exim user.
 
 
 Exim version 4.66
